fix overlapped name

--- a/client/src/scss/components/_bubble_header.scss
+++ b/client/src/scss/components/_bubble_header.scss
@@ -9,7 +9,7 @@
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#f0f0f0', GradientType=0);
 
   .bubble {
-    width: 64px;
+    text-align: center;
     &.mini {
       width: 32px;
     }
